store item spacing fix

--- a/client/src/Components/HomeItems/HomeItems.css
+++ b/client/src/Components/HomeItems/HomeItems.css
@@ -1,53 +1,60 @@
-.home-items-container{
+.home-items-container {
     position: flex;
     flex-direction: row;
 
-   
+
 }
 
-.home-items{
+.home-items {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     margin: 20px;
-    
+
 }
 
-.items-ea{
+.items-ea {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin: 20px;
+   
 }
 
-.call-action a{
+.call-action a {
     font-size: xx-large;
     text-decoration: none;
-    color: black;
-    
-    
+    background-color: white;
+    background-image: linear-gradient(45deg, #a0c7fd, #63a3fd,#f39aff, #e545fa);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
-.call-action button{
-  
+.call-action button {
+
     border-radius: 8px;
-    
+    border: 0.5px solid white;
     padding: 10px;
-    background-color: rgb(254, 254, 254);
+    background-color: rgba(255, 255, 255, 0.063);
     box-shadow: 20px;
     color: black;
-    /* box-shadow: 0px 4px 6px  rgb(0,0,0); */
+   
 }
 
 .call-action button:hover {
-    background-color:rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.00);
     color: white;
     transition: 0.5s;
 }
-.call-action a:hover {
+
+/* .call-action a:hover {
 
     color: white;
     transition: 0.5s;
-}
+} */
