--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -52,11 +52,12 @@
 .youtube-vid {
   width: 80%;
   align-self: center;
+  margin-bottom: 100px;
 }
 
 .white {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   background-color: rgba(90, 90, 90, 0.438);
   z-index: 10;
   position: relative;
@@ -64,7 +65,10 @@
   border-top: 2px solid #fdfbfb78;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ 
 
 
 }
@@ -73,10 +77,11 @@
   
 
   align-self: center;
-  background-color: rgba(252, 251, 251, 0.438);
+  background-color: rgba(252, 251, 251, 0.115);
   width: 90%;
   height: 100%;
-  align-items: center;
+  margin-bottom: 100px;
+ 
   border-radius: 10px;
   border: 1px solid white;
   box-shadow: 0px 5px 10px 1px black;
